sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: not found: value lgr
  lgr=getNombreValeurs()
  ^AlgBubbleSort2:5: error: not found: value lgr
  for (i <- lgr-2 to 0)
            ^